--- a/sjw2024_ford02_magyarorszagvizei/forras/index.html
+++ b/sjw2024_ford02_magyarorszagvizei/forras/index.html
@@ -145,7 +145,7 @@
           </p>
         </div>
       </div>
-      <table>
+      <table class="my-5">
         <thead>
           <tr>
             <th colspan="2">Hévízi-tó növényvilága</th>
@@ -210,7 +210,52 @@
           </tr>
         </tbody>
       </table>
+
+      <h2>További vizeink képekben</h2>
+      <div class="other-images">
+        <img
+          src="img/balaton.jpg"
+          alt="Balaton"
+          title="Balaton (Készítette: Posza Róbert - Pixabay)"
+          class="img-fluid column c-1"
+        />
+        <img
+          class="img-fluid column"
+          src="img/zala.jpg"
+          alt="Zala"
+          title="Zala folyó (Készítette: Civertan - Wikimedia )"
+        />
+        <img
+          class="img-fluid column"
+          src="img/raba.jpg"
+          alt="Rába"
+          title="Rába folyó (Készítette: Civertan - Wikimedia )"
+        />
+        <img
+          class="img-fluid column"
+          src="img/dunakanyar.jpg"
+          alt="Dunakanyar"
+          title="Dunakanyar (Készítette: Civertan - Wikimedia)"
+        />
+        <img
+          class="img-fluid column"
+          src="img/tiszato.jpg"
+          alt="Tisza-tó"
+          title="Tisza-tó (Készítette: Frank Paul Silye - Wikimedia )"
+        />
+        <img
+          class="img-fluid column c-6"
+          src="img/tisza.jpg"
+          alt="Tisza"
+          title="Tisza (Készítette: Takkk - Wikimedia )"
+        />
+      </div>
     </div>
+
+    <footer>
+      <img src="img/wave.svg" alt="" />
+      <h1>Skills Junior 2024 - Webfejlesztő kategória - Géczi Kornél</h1>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
