--- a/sjw2024_ford02_magyarorszagvizei/forras/index.html
+++ b/sjw2024_ford02_magyarorszagvizei/forras/index.html
@@ -81,7 +81,7 @@
         Ausztria, Szlovákia, Ukrajna és Románia. Magyarország a "lefolyó vizek"
         országa.
       </p>
-      <div class="row">
+      <div class="row" id="velence">
         <div class="col-12 col-md-7">
           <h2>Velencei-tó</h2>
           <p>
@@ -120,7 +120,7 @@
             class="img-fluid rounded mx-auto d-block img-thumbnail mb-3"
           />
         </div>
-        <div class="col-12 col-md-7">
+        <div class="col-12 col-md-7" id="heviz">
           <h2>Hévízi-tó</h2>
           <p>
             A Hévízi-gyógytó Természetvédelmi Terület legismertebb látványossága
@@ -212,7 +212,7 @@
       </table>
 
       <h2>További vizeink képekben</h2>
-      <div class="other-images">
+      <div class="other-images" id="tovabbi">
         <img
           src="img/balaton.jpg"
           alt="Balaton"
@@ -220,25 +220,25 @@
           class="img-fluid column c-1"
         />
         <img
-          class="img-fluid column"
+          class="img-fluid column c-2"
           src="img/zala.jpg"
           alt="Zala"
           title="Zala folyó (Készítette: Civertan - Wikimedia )"
         />
         <img
-          class="img-fluid column"
+          class="img-fluid column c-3"
           src="img/raba.jpg"
           alt="Rába"
           title="Rába folyó (Készítette: Civertan - Wikimedia )"
         />
         <img
-          class="img-fluid column"
+          class="img-fluid column c-4"
           src="img/dunakanyar.jpg"
           alt="Dunakanyar"
           title="Dunakanyar (Készítette: Civertan - Wikimedia)"
         />
         <img
-          class="img-fluid column"
+          class="img-fluid column c-5"
           src="img/tiszato.jpg"
           alt="Tisza-tó"
           title="Tisza-tó (Készítette: Frank Paul Silye - Wikimedia )"
